# EpicStaff-autoReview

./: .cursorrules  .gitattributes  .gitignore  .pre-commit-config.yaml  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TEST.txt  THIRD-PARTY-NOTICES.md  downloader.bat  downloader.sh  instruction-for-partly-local-launch  launcher.bat  launcher.sh  partly-local-setup.md  podman-setup.md  run_program.bat  run_program.sh
installer/: .dockerignore  Dockerfile.installer  README.md  poetry.toml  pyproject.toml
installer/app/: flask.py  main.py  utils.py
installer/app/services/: __init__.py  docker_service.py  docker_volume_manager.py
installer/app/static/: index.css
installer/app/templates/: index.html
installer/tests/: conftest.py  test_utils.py
integration_tests/mcp-test-tool/: Dockerfile  docker-compose.yaml  main.py  pyproject.toml
src/agent/: Dockerfile.agent  conftest.py  main.py  pyproject.toml  pyrightconfig.json  settings.py
src/agent/app/: __init__.py  constants.py  data_loader.py  enums.py  exceptions.py  factory.py  logging_utils.py  models.py  request_handler.py
src/agent/tests/: test_contract.py  test_logging_utils.py
src/crew/: .dockerignore  Dockerfile.crew  create_workflow.py  main.py  pyproject.toml  pytest.ini  settings.py  stand.py
src/crew/callbacks/: __init__.py  session_callback_factory.py
src/crew/config/: __init__.py  config.py
src/crew/constants/: constants.py
src/crew/models/: graph_models.py  request_models.py  response_models.py  state.py
src/crew/services/: knowledge_search_service.py  pickle_encode.py  python_code_executor_service.py  redis_service.py  run_python_code_service.py
src/crew/tests/: conftest.py
src/crew/utils/: __init__.py  agent_crew_llm.py  envpy.py  groq.py  helpers.py  llm_wrapper.py  logger.py  map_variables.py  memory_monitor.py  ollama_loader.py  parse_llm.py  psutil_wrapper.py  set_output_variables.py  sync_wrapper.py  tools_llm_config.py
src/django_app/: .dockerignore  Dockerfile.dj  entrypoint.sh  entrypoint_debug.ps1  entrypoint_debug.sh  manage.py  pyproject.toml  pyrightconfig.json
src/django_app/django_app/: asgi.py  routing.py  settings.py  spectacular_hooks.py  urls.py  yasg.py
src/django_app/tables/: admin.py  apps.py  authentication.py  enums.py  exceptions.py  filters.py  permissions.py  renderers.py  request_models.py  storage_mock_data.py  storage_permissions.py  throttles.py  urls.py
src/django_app/tests/: conftest.py  fixtures.py  graph_stress_test.py  helpers.py  locustfile.py  python_code_tool_test.py  settings.py  test_migration_0170.py
src/django_app/utils/: exception_handler.py  graph_utils.py  logger.py
src/knowledge/: .dockerignore  Dockerfile.knowledge  collection_processor.py  main.py  pyproject.toml  settings.py
src/knowledge/chunkers/: __init__.py  base_chunker.py  character_chunker.py  csv_chunker.py  html_chunker.py  json_chunker.py  markdown_chunker.py  token_chunker.py
src/knowledge/embedder/: base_embedder.py  cohere.py  custom_embedder.py  gemini.py  mistral.py  openai.py  together_ai.py
src/knowledge/models/: enums.py  redis_models.py
src/knowledge/rag/: __init__.py  base_rag_strategy.py  naive_rag_strategy.py  rag_strategy_factory.py
src/knowledge/services/: cancellation_token.py  chunk_document_service.py  chunking_job_registry.py  collection_processor_service.py  redis_service.py
src/knowledge/storage/: __init__.py  base_storage.py  document_chunk_storage.py  document_storage.py  graph_rag_storage.py  knowledge_storage.py  naive_rag_storage.py
src/knowledge/utils/: file_text_extractor.py  indexing_error_classifier.py
src/manager/: .dockerignore  Dockerfile.man  app.py  base_models.py  manager_config.yaml  pyproject.toml  tools_config.json  tools_paths.json
src/manager/db/: config.py  deps.py
src/manager/helpers/: logger.py  yaml_parser.py
src/manager/models/: models.py
src/manager/repositories/: import_tool_data_repository.py  schedule_trigger_repository.py  session_repository.py
src/manager/services/: base_models.py  build_tool.py  pickle_encode.py  redis_service.py  schedule_service.py  schedule_trigger_strategies.py  session_timeout_service.py  tool_container_service.py  tool_image_service.py
src/manager/utils/: timezone_utils.py
src/realtime/: .gitignore  Dockerfile.realtime  pyproject.toml  run_server.py
src/realtime/api/: connection_repository.py  main.py
src/realtime/application/: conversation_service.py  tool_manager_service.py  voice_call_service.py
src/realtime/core/: config.py
src/realtime/db/: database.py
src/realtime/models/: ai_models.py  db_models.py  request_models.py  response_models.py
src/realtime/services/: chat_buffer.py  chat_executor.py  python_code_executor_service.py  redis_service.py  summarize_buffer.py  tool_manager_service.py
src/realtime/tests/: conftest.py  fixtures.py  test_tool_manager.py  test_websocket.py
src/realtime/tool_executors/: __init__.py  base_tool_executor.py  configured_tool_executor.py  knowledge_tool_executor.py  python_code_tool_executor.py  stop_agent_tool_executor.py
src/realtime/utils/: auth.py  instructions_concatenator.py  request_utils.py  shorten.py  tokenizer.py
src/sandbox/: .dockerignore  Dockerfile.sandbox  dynamic_venv_executor_chain.py  main.py  models.py  pyproject.toml
src/sandbox/chains/: create_venv_executor_chain.py  dynamic_venv_executor_chain.py
src/sandbox/services/: exceptions.py  execute_code_service.py  redis_service.py  venv_manager_service.py
src/sandbox/tests/: redis_request_test.py
src/sandbox/utils/: execute_command.py  logger.py
src/shared/: pyproject.toml
src/shared/communication/: __init__.py  consumer.py  error_handler.py  errors.py  message.py  producer.py  pyproject.toml
src/shared/dotdict/: LICENSE  (+3 more)
src/tool/: .dockerignore  Dockerfile.tool  app.py  base_models.py  mcp_tools.md  parse_model_data.py  pickle_encode.py  pyproject.toml  tool_factory.py  tools_scanner.py  utils.py
src/voice_app/: pyproject.toml  run.py
src/webhook/: Dockerfile  README.md  pyproject.toml  run.py
(+3824 files in other folders)
