[project]
name = "stand-tool"
version = "0.1.0"
description = "Stand mcp tool"
authors = [
    {name = "maksym.yevstratiev",email = "maksym.yevstratiev@hys-enterprise.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "fastmcp (>=2.12.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false