[tool.poetry]
name = "agent"
version = "0.1.0"
description = "EpicStaff agent execution runtime"
authors = ["EpicStaff"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12.10,<3.13"
litellm = "1.85.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core==2.4.0"]
build-backend = "poetry.core.masonry.api"
