[tool.poetry]
name = "agent"
version = "0.1.0"
description = "EpicStaff agent execution runtime"
authors = ["EpicStaff"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12.10,<3.13"
litellm = "1.85.1"
loguru = ">=0.7.3,<0.8.0"
redis = "5.2.1"
pydantic = "^2.10"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core==2.4.0"]
build-backend = "poetry.core.masonry.api"
