[tool.poetry]
name = "crewai-sheets-ui"
version = "0.6.0"
description = "Web CrewAI"
authors = ["yuriwa"]
license = "MIT"
readme = "README.md"
package-mode = false
packages = [
    { include = "src" },
    { include = "libraries/crewAI" }
]


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
crewai-tools = "0.33.0"
pandas = "2.2.3"
ollama = "0.4.7"
langchain-anthropic = "0.2.4"
langchain-groq = "0.2.4"
langchain-community = "0.3.16"
rich = "13.9.4"
sentry-sdk = "2.20.0"
open-interpreter = "0.4.3"
langgraph = ">=0.3.16"
typing-extensions = "4.12.2"
pyyaml = "6.0.2"
python-dotenv = "1.1.0"
datamodel-code-generator = "0.26.0"
redis = "5.2.0"
loguru = "0.7.2"
psycopg2 = "2.9.10"
litellm = "1.67.0"
openai = {extras = ["voice-helpers"], version = "1.95.0"}
fastmcp = "^2.12.2"

[tool.poetry.group.crew.dependencies]
mem0ai = { path = "libraries/mem0" }
crewai = {path = "libraries/crewAI"}

[tool.poetry.group.dotdict.dependencies]
dotdict = { path = "../shared/dotdict" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^25.9.0"
flake8 = "^7.1.1"
mypy = "^1.11.1"
pre-commit = "^3.8.0"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.24.0"
pytest-vcr = "^1.0.2"
fakeredis = "^2.26.1"
polyfactory = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
