[project]
name = "knowledge"
version = "0.1.0"
description = ""
authors = [
    {name = "Artur Drohomeretskyi",email = "artur.drohomeretskyi@hys-enterprise.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
package-mode = false
dependencies = [
    "langchain-text-splitters (>=0.3.6,<0.4.0)",
    "openai (>=1.65.2,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "tiktoken (>=0.11.0)",
    "lxml (>=5.3.1,<6.0.0)",
    "cachetools (>=5.5.2,<6.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "google-genai (>=1.13.0,<2.0.0)",
    "cohere (>=5.15.0,<6.0.0)",
    "mistralai (>=1.7.0,<2.0.0)",
    "together (>=1.5.7,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pgvector (>=0.4.1,<0.5.0)",
    "pymupdf (>=1.25.1,<2.0.0)",
    "python-docx (>=1.1.2,<2.0.0)",
    "chonkie (>=1.5.4,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.ruff]
select = ["E"]
ignore = ["E402","E501"]
