[tool.poetry]
name = "manager"
version = "0.1.0"
description = "manager for tools and crew containers"
authors = ["Ihor Orlenko", "Maksym Yevstratiev"]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "1.0.1"
fastapi = {extras = ["all"], version = "0.115.2"}
uvicorn = "0.32.0"
docker = "7.1.0"
redis = "5.2.0"
loguru = "0.7.2"
sqlalchemy = "^2.0.40"
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
pytest-asyncio = "0.24.0"
pytest-mock = "3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = ["E"]
ignore = ["E402","E501"]