[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["Maksym Yevstratiev <maksym.yevstratiev@hys-enterprise.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
redis = "5.2.1"
loguru = "0.7.3"
pydantic = ">=2.10.5"
python-dotenv = "1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
pytest-asyncio = "0.25.2"
fakeredis = "2.26.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
