[project]
name = "epicstaff-shared"
version = "0.1.0"
description = ""
authors = [
    {name = "maksym.yevstratiev",email = "maksym.yevstratiev@hys-enterprise.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
