[project]
name = "voice-app"
version = "0.1.0"
description = ""
authors = [
    {name = "MaksymYevstratievHYS",email = "maksym.yevstratiev@hys-enterprise.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "fastapi (==0.120.1)",
    "uvicorn[standard] (==0.38.0)",
    "pydantic (>=2.10.5)",
    "pydantic-settings (==2.11.0)",
    "python-dotenv (>=1.0.1)",
    "loguru (>=0.7.3,<0.8.0)",
    "redis (==5.2.1)",
    "pyngrok (==7.4.1)",
    "uvloop (==0.22.1) ; sys_platform != \"win32\"",
    "httpx (>=0.28.1,<0.29.0)",
    "twilio (>=9.9.1,<10.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "llama-index-core (>=0.11.17,<0.12.0)",
    "pynput (>=1.7.7,<2.0.0)",
    "websockets (>=16.0,<17.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
