[project]
name = "communication"
version = "0.1.0"
description = "Transport messaging between microservices."
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.13.4,<3.0.0)",
    "redis (>=8.0.0,<9.0.0)",
    "minio (>=7.2.20,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "testcontainers (>=4.14.2,<5.0.0)"
]
