[project]
name = "epicstaff-storage"
version = "0.1.0"
description = "Storage client module for EpicStaff sandbox Python nodes"
requires-python = ">=3.12"
dependencies = ["boto3>=1.35"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["epicstaff_storage"]

[tool.setuptools.package-dir]
epicstaff_storage = "."
