[project]
name = "git-tools"
version = "0.1.0"
description = ""
authors = [
    {name = "MaksymYevstratievHYS",email = "maksym.yevstratiev@hys-enterprise.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pygithub (>=2.8.1,<3.0.0)",
    "fastmcp (>=2.12.5,<3.0.0)",
    "python-gitlab (>=6.5.0,<7.0.0)",
    "pydantic (>=2.12.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
